# labgrid-ui

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYRIGHT_HOLDERS  Cargo.toml  DEVELOPING.md  README.md  deny.toml  justfile
.config/: nextest.toml
auxiliary/: com.duagon.labgrid-ui.yaml
auxiliary/git-hooks/: pre-commit.hook
crates/core/: Cargo.toml  build.rs
crates/core/proto/: labgrid-coordinator.proto  labgrid-coordinator.proto.license
crates/core/src/: lib.rs
crates/core/src/grpc/: error.rs  mod.rs  types.rs
crates/testcli/: Cargo.toml
crates/testcli/src/: main.rs
crates/ui/: Cargo.toml  build.rs  i18n.toml
crates/ui/data/: com.duagon.labgrid-ui.desktop  com.duagon.labgrid-ui.metainfo.xml
crates/ui/data/fonts/: Cantarell-BoldItalic.ttf.license  Inconsolata-VariableFont_wdth_wght.ttf.license  NotoEmoji-VariableFont_wght.ttf.license
crates/ui/data/icons/: com.duagon.labgrid-ui.svg.license
crates/ui/data/screenshots/: labgrid-ui-settings.png.license
crates/ui/i18n/de-CH/: labgrid_ui.ftl
crates/ui/i18n/de-DE/: labgrid_ui.ftl  labgrid_ui.ftl.license
crates/ui/i18n/en-US/: labgrid_ui.ftl
crates/ui/i18n/es-ES/: labgrid_ui.ftl
crates/ui/src/: app.rs  config.rs  connection.rs  i18n.rs  main.rs  scripts.rs  util.rs
crates/ui/src/views/: connected.rs  connecting.rs  generic.rs  mod.rs  notconnected.rs  settings.rs
scripts/: failing.py  hello_world.py  power_off.py  relay_power_off.py  relay_power_on.py
