# SPDX-FileCopyrightText: 2025 Duagon Germany GmbH
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = ["crates/core", "crates/ui", "crates/testcli"]
resolver = "2"

[workspace.package]
authors = ["Felix Zwettler"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
labgrid-ui-core = { path = "crates/core" }

anyhow = "1.0.98"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
clap = "4.5.37"
directories = "6.0.0"
fluent = "0.17.0"
futures = "0.3.31"
futures-util = "0.3.31"
i18n-embed = "0.15.4"
i18n-embed-fl = "0.9.4"
iced = "0.14.0"
iced_aw = "0.13.0"
iced_fonts = "0.3.0"
notify = "8.0.0"
numeric-sort = "0.1.4"
once_cell = "1.21.3"
prost = "0.13.5"
rfd = "=0.15.4"
rust-embed = "8.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = "0.13.0"
tonic-build = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
whoami = "1.6.0"

[patch.crates-io]
