# SPDX-FileCopyrightText: 2025 Duagon Germany GmbH
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
build = "build.rs"
edition.workspace = true
license.workspace = true
name = "labgrid-ui-core"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
numeric-sort = "0.1.1"
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
