# SPDX-FileCopyrightText: 2025 Duagon Germany GmbH
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
edition.workspace = true
license.workspace = true
name = "labgrid-ui-testcli"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
labgrid-ui-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
